# PacketSender

./: .gitignore  .travis.yml  CODE_OF_CONDUCT.md  README.de.md  README.es.md  README.fr.md  README.md  SECURITY.md  appveyor.yml  azure-pipelines.yml  packetsender-cask.rb  packetsender.rb  snapcraft.yaml  v8.3.5.md  vpat_2.4_packetsender.doc
.github/: CONTRIBUTING.md  FUNDING.yml  ISSUE_TEMPLATE.md  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: ask-a-question.md  bug_report.md  config.yml  feature_request.md
.github/workflows/: build-debian.yml
.github/workflows/debian/: changelog  control  copyright  rules
ci_cd/linux/: linux-build.sh  linux-prebuild.php  linux-prebuild.sh
ci_cd/mac/: mac-build.sh
ci_cd/windows/: makeall.bat  win-build.bat  win-deploy.bat  win-prebuild.bat  win-prebuild.php
src/: .astylerc  CMakeLists.txt  GetGitRevisionDescription.cmake  GetGitRevisionDescription.cmake.in  Info.plist  PacketSender.pro  PacketSenderCLI.pro  PacketSenderSnap.pro  about.cpp  about.h  about.ui  association.cpp  association.h  basetcpthread.cpp  basetcpthread.h  brucethepoodle.cpp  brucethepoodle.h  brucethepoodle.ui  cloudui.cpp  cloudui.h  cloudui.ui  cmd_dtls_client.bat  cmd_dtls_client.txt  connection.cpp  connection.h  connectionmanager.cpp  connectionmanager.h  dtlsserver.cpp  dtlsserver.h  dtlsthread.cpp  dtlsthread.h  ebcdic_ascii_map.h  globals.h  irisandmarigold.cpp  irisandmarigold.h  irisandmarigold.ui  languagechooser.cpp  languagechooser.h  languagechooser.ui  main.cpp  (+71 more)
src/languages/: packetsender_cn.qm  packetsender_cn.ts  packetsender_de.qm  packetsender_de.ts  packetsender_en.ts  packetsender_es.qm  packetsender_es.ts  packetsender_fr.qm  packetsender_fr.ts  packetsender_hi.qm  packetsender_hi.ts  packetsender_it.qm  packetsender_it.ts
src/qdarkstyle/: style.qss
src/snap/: CMakeLists.txt
src/tests/unit/: CMakeLists.txt  basetcpthreadtests.cpp  basetcpthreadtests.h  connection_tests.cpp  connection_tests.h  connectionmanager_tests.cpp  connectionmanager_tests.h  outgoingtcptests.cpp  outgoingtcptests.h  packettests.cpp  packettests.h  persistentconnectionlooptests.cpp  persistentconnectionlooptests.h  tcpthreadqapplicationneededtests.cpp  tcpthreadqapplicationneededtests.h  tcpthreadtests.cpp  tcpthreadtests.h  test_connection.cpp  test_connection.h  test_runner.cpp  testutils.cpp  testutils.h  translation_test.cpp  translation_test.h  translation_tests.cpp  translation_tests.h
src/tests/unit/testdoubles/: MockSslSocket.h  basetcpthreadtestdouble.h  outgoingtchpthreadtestdouble.h  testtcpthreadclass.h
